syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeyManagerGrpc";


package br.com.zup.edu;

service RegisterKeyGrpcService {
  rpc register (RegisterKeyGrpcRequest) returns (RegisterKeyGrpcResponse) {}
}

service DeleteKeyGrpcService {
  rpc delete  (DeleteKeyGrpcRequest) returns (DeleteKeyGrpcResponse) {}
}

enum KeyType{
  UNKNOWN_KEY_TYPE = 0;
  CPF =1;
  CELLPHONE =2;
  EMAIL=3;
  RANDOM=4;
}

enum AccountType{
    UNKNOWN_ACCOUNT_TYPE = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message RegisterKeyGrpcRequest {
  string clientId = 1;
  KeyType pixKeyType =2;
  string  keyValue =3;
  AccountType ClientAccountType = 4;
}

message RegisterKeyGrpcResponse {
  string pixId = 1;
  string clientId =2;
}

message DeleteKeyGrpcRequest{
  string pixId = 1;
  string clientId =2;
}

message DeleteKeyGrpcResponse{
  string pixId = 1;
  string clientId =2;
}